Semester 5/Compilers Lab/Lab6/y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | STRING_LITERAL
    4                   | ROBRAOPEN expression ROBRACLOSE

    5 constant: INTEGER_CONSTANT
    6         | FLOATING_CONSTANT
    7         | ENUMERATION_CONSTANT
    8         | CHARACTER_CONSTANT

    9 postfix_expression: primary_expression
   10                   | postfix_expression SQBRAOPEN expression SQBRACLOSE
   11                   | postfix_expression ROBRAOPEN ROBRACLOSE
   12                   | postfix_expression ROBRAOPEN argument_expression_list ROBRACLOSE
   13                   | postfix_expression DOT IDENTIFIER
   14                   | postfix_expression ACC IDENTIFIER
   15                   | postfix_expression INC
   16                   | postfix_expression DEC
   17                   | ROBRAOPEN type_name ROBRACLOSE CURBRAOPEN initializer_list CURBRACLOSE
   18                   | ROBRAOPEN type_name ROBRACLOSE CURBRAOPEN initializer_list COMMA CURBRACLOSE

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list COMMA assignment_expression

   21 unary_expression: postfix_expression
   22                 | INC unary_expression
   23                 | DEC unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF unary_expression
   26                 | SIZEOF ROBRAOPEN type_name ROBRACLOSE

   27 unary_operator: AMP
   28               | MUL
   29               | ADD
   30               | SUB
   31               | NEG
   32               | EXCLAIM

   33 cast_expression: unary_expression
   34                | ROBRAOPEN type_name ROBRACLOSE cast_expression

   35 multiplicative_expression: cast_expression
   36                          | multiplicative_expression MUL cast_expression
   37                          | multiplicative_expression DIV cast_expression
   38                          | multiplicative_expression MODULO cast_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression ADD multiplicative_expression
   41                    | additive_expression SUB multiplicative_expression

   42 shift_expression: additive_expression
   43                 | shift_expression SHL additive_expression
   44                 | shift_expression SHR additive_expression

   45 relational_expression: shift_expression
   46                      | relational_expression BITSHL shift_expression
   47                      | relational_expression BITSHR shift_expression
   48                      | relational_expression LTE shift_expression
   49                      | relational_expression GTE shift_expression

   50 equality_expression: relational_expression
   51                    | equality_expression EQ relational_expression
   52                    | equality_expression NEQ relational_expression

   53 AND_expression: equality_expression
   54               | AND_expression AMP equality_expression

   55 exclusive_OR_expression: AND_expression
   56                        | exclusive_OR_expression BITXOR AND_expression

   57 inclusive_OR_expression: exclusive_OR_expression
   58                        | inclusive_OR_expression BITOR exclusive_OR_expression

   59 logical_AND_expression: inclusive_OR_expression
   60                       | logical_AND_expression N AND M inclusive_OR_expression

   61 logical_OR_expression: logical_AND_expression
   62                      | logical_OR_expression N OR M logical_AND_expression

   63 M: ε

   64 N: ε

   65 conditional_expression: logical_OR_expression
   66                       | logical_OR_expression N QUESTION M expression N COLON M conditional_expression

   67 assignment_expression: conditional_expression
   68                      | unary_expression assignment_operator assignment_expression

   69 assignment_operator: ASSIGN
   70                    | STAREQ
   71                    | DIVEQ
   72                    | MODEQ
   73                    | PLUSEQ
   74                    | MINUSEQ
   75                    | SHLEQ
   76                    | SHREQ
   77                    | BINANDEQ
   78                    | BINXOREQ
   79                    | BINOREQ

   80 expression: assignment_expression
   81           | expression COMMA assignment_expression

   82 constant_expression: conditional_expression

   83 declaration: declaration_specifiers init_declarator_list SEMICOLON
   84            | declaration_specifiers SEMICOLON

   85 declaration_specifiers: storage_class_specifier declaration_specifiers
   86                       | storage_class_specifier
   87                       | type_specifier declaration_specifiers
   88                       | type_specifier
   89                       | type_qualifier declaration_specifiers
   90                       | type_qualifier
   91                       | function_specifier declaration_specifiers
   92                       | function_specifier

   93 init_declarator_list: init_declarator
   94                     | init_declarator_list COMMA init_declarator

   95 init_declarator: declarator
   96                | declarator ASSIGN initializer

   97 storage_class_specifier: EXTERN
   98                        | STATIC
   99                        | AUTO
  100                        | REGISTER

  101 type_specifier: VOID
  102               | CHAR
  103               | SHORT
  104               | INT
  105               | LONG
  106               | FLOAT
  107               | DOUBLE
  108               | SIGNED
  109               | UNSIGNED
  110               | BOOL
  111               | COMPLEX
  112               | IMAGINARY
  113               | enum_specifier

  114 specifier_qualifier_list: type_specifier specifier_qualifier_list
  115                         | type_specifier
  116                         | type_qualifier specifier_qualifier_list
  117                         | type_qualifier

  118 enum_specifier: ENUM IDENTIFIER CURBRAOPEN enumerator_list CURBRACLOSE
  119               | ENUM CURBRAOPEN enumerator_list CURBRACLOSE
  120               | ENUM IDENTIFIER CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  121               | ENUM CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  122               | ENUM IDENTIFIER

  123 enumerator_list: enumerator
  124                | enumerator_list COMMA enumerator

  125 enumerator: IDENTIFIER
  126           | IDENTIFIER ASSIGN constant_expression

  127 type_qualifier: CONST
  128               | RESTRICT
  129               | VOLATILE

  130 function_specifier: INLINE

  131 declarator: pointer direct_declarator
  132           | direct_declarator

  133 direct_declarator: IDENTIFIER
  134                  | ROBRAOPEN declarator ROBRACLOSE
  135                  | direct_declarator SQBRAOPEN type_qualifier_list assignment_expression SQBRACLOSE
  136                  | direct_declarator SQBRAOPEN type_qualifier_list SQBRACLOSE
  137                  | direct_declarator SQBRAOPEN assignment_expression SQBRACLOSE
  138                  | direct_declarator SQBRAOPEN SQBRACLOSE
  139                  | direct_declarator SQBRAOPEN STATIC type_qualifier_list assignment_expression SQBRACLOSE
  140                  | direct_declarator SQBRAOPEN STATIC assignment_expression SQBRACLOSE
  141                  | direct_declarator SQBRAOPEN type_qualifier_list MUL SQBRACLOSE
  142                  | direct_declarator SQBRAOPEN MUL SQBRACLOSE
  143                  | direct_declarator ROBRAOPEN CT parameter_type_list ROBRACLOSE
  144                  | direct_declarator ROBRAOPEN identifier_list ROBRACLOSE
  145                  | direct_declarator ROBRAOPEN CT ROBRACLOSE

  146 CT: ε

  147 pointer: MUL type_qualifier_list
  148        | MUL
  149        | MUL type_qualifier_list pointer
  150        | MUL pointer

  151 type_qualifier_list: type_qualifier
  152                    | type_qualifier_list type_qualifier

  153 parameter_type_list: parameter_list
  154                    | parameter_list COMMA DOTS

  155 parameter_list: parameter_declaration
  156               | parameter_list COMMA parameter_declaration

  157 parameter_declaration: declaration_specifiers declarator
  158                      | declaration_specifiers

  159 identifier_list: IDENTIFIER
  160                | identifier_list COMMA IDENTIFIER

  161 type_name: specifier_qualifier_list

  162 initializer: assignment_expression
  163            | CURBRAOPEN initializer_list CURBRACLOSE
  164            | CURBRAOPEN initializer_list COMMA CURBRACLOSE

  165 initializer_list: designation initializer
  166                 | initializer
  167                 | initializer_list COMMA designation initializer
  168                 | initializer_list COMMA initializer

  169 designation: designator_list ASSIGN

  170 designator_list: designator
  171                | designator_list designator

  172 designator: SQBRAOPEN constant_expression SQBRACLOSE
  173           | DOT IDENTIFIER

  174 statement: labeled_statement
  175          | compound_statement
  176          | expression_statement
  177          | selection_statement
  178          | iteration_statement
  179          | jump_statement

  180 labeled_statement: IDENTIFIER COLON statement
  181                  | CASE constant_expression COLON statement
  182                  | DEFAULT COLON statement

  183 compound_statement: CURBRAOPEN block_item_list CURBRACLOSE
  184                   | CURBRAOPEN CURBRACLOSE

  185 block_item_list: block_item
  186                | block_item_list M block_item

  187 block_item: declaration
  188           | statement

  189 expression_statement: expression SEMICOLON
  190                     | SEMICOLON

  191 selection_statement: IF ROBRAOPEN expression N ROBRACLOSE M statement N
  192                    | IF ROBRAOPEN expression N ROBRACLOSE M statement N ELSE M statement
  193                    | SWITCH ROBRAOPEN expression ROBRACLOSE statement

  194 iteration_statement: WHILE M ROBRAOPEN expression ROBRACLOSE M statement
  195                    | DO M statement M WHILE ROBRAOPEN expression ROBRACLOSE SEMICOLON
  196                    | FOR ROBRAOPEN expression_statement M expression_statement ROBRACLOSE M statement
  197                    | FOR ROBRAOPEN expression_statement M expression_statement M expression N ROBRACLOSE M statement

  198 jump_statement: GOTO IDENTIFIER SEMICOLON
  199               | CONTINUE SEMICOLON
  200               | BREAK SEMICOLON
  201               | RETURN expression SEMICOLON
  202               | RETURN SEMICOLON

  203 translation_unit: external_declaration
  204                 | translation_unit external_declaration

  205 external_declaration: function_definition
  206                     | declaration

  207 function_definition: declaration_specifiers declarator declaration_list CT compound_statement
  208                    | declaration_specifiers declarator CT compound_statement

  209 declaration_list: declaration
  210                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 99
    ENUM (259) 118 119 120 121 122
    RESTRICT (260) 128
    UNSIGNED (261) 109
    BREAK (262) 200
    EXTERN (263) 97
    RETURN (264) 201 202
    VOID (265) 101
    CASE (266) 181
    FLOAT (267) 106
    SHORT (268) 103
    VOLATILE (269) 129
    CHAR (270) 102
    FOR (271) 196 197
    SIGNED (272) 108
    WHILE (273) 194 195
    CONST (274) 127
    GOTO (275) 198
    SIZEOF (276) 25 26
    BOOL (277) 110
    CONTINUE (278) 199
    IF (279) 191 192
    STATIC (280) 98 139 140
    COMPLEX (281) 111
    DEFAULT (282) 182
    INLINE (283) 130
    STRUCT (284)
    IMAGINARY (285) 112
    DO (286) 195
    INT (287) 104
    SWITCH (288) 193
    DOUBLE (289) 107
    LONG (290) 105
    TYPEDEF (291)
    ELSE (292) 192
    REGISTER (293) 100
    UNION (294)
    IDENTIFIER <symp> (295) 1 13 14 118 120 122 125 126 133 159 160 173 180 198
    INTEGER_CONSTANT <intval> (296) 5
    FLOATING_CONSTANT <charval> (297) 6
    CHARACTER_CONSTANT <charval> (298) 8
    ENUMERATION_CONSTANT <charval> (299) 7
    STRING_LITERAL <charval> (300) 3
    SQBRAOPEN (301) 10 135 136 137 138 139 140 141 142 172
    SQBRACLOSE (302) 10 135 136 137 138 139 140 141 142 172
    ROBRAOPEN (303) 4 11 12 17 18 26 34 134 143 144 145 191 192 193 194 195 196 197
    ROBRACLOSE (304) 4 11 12 17 18 26 34 134 143 144 145 191 192 193 194 195 196 197
    CURBRAOPEN (305) 17 18 118 119 120 121 163 164 183 184
    CURBRACLOSE (306) 17 18 118 119 120 121 163 164 183 184
    DOT (307) 13 173
    ACC (308) 14
    INC (309) 15 22
    DEC (310) 16 23
    AMP (311) 27 54
    MUL (312) 28 36 141 142 147 148 149 150
    ADD (313) 29 40
    SUB (314) 30 41
    NEG (315) 31
    EXCLAIM (316) 32
    DIV (317) 37
    MODULO (318) 38
    SHL (319) 43
    SHR (320) 44
    BITSHL (321) 46
    BITSHR (322) 47
    LTE (323) 48
    GTE (324) 49
    EQ (325) 51
    NEQ (326) 52
    BITXOR (327) 56
    BITOR (328) 58
    AND (329) 60
    OR (330) 62
    QUESTION (331) 66
    COLON (332) 66 180 181 182
    SEMICOLON (333) 83 84 189 190 195 198 199 200 201 202
    DOTS (334) 154
    ASSIGN (335) 69 96 126 169
    STAREQ (336) 70
    DIVEQ (337) 71
    MODEQ (338) 72
    PLUSEQ (339) 73
    MINUSEQ (340) 74
    SHLEQ (341) 75
    SHREQ (342) 76
    BINANDEQ (343) 77
    BINXOREQ (344) 78
    BINOREQ (345) 79
    COMMA (346) 18 20 81 94 120 121 124 154 156 160 164 167 168
    HASH (347)
    THEN (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    primary_expression <E> (95)
        on left: 1 2 3 4
        on right: 9
    constant <symp> (96)
        on left: 5 6 7 8
        on right: 2
    postfix_expression <A> (97)
        on left: 9 10 11 12 13 14 15 16 17 18
        on right: 10 11 12 13 14 15 16 21
    argument_expression_list <intval> (98)
        on left: 19 20
        on right: 12 20
    unary_expression <A> (99)
        on left: 21 22 23 24 25 26
        on right: 22 23 25 33 68
    unary_operator <unaryOperator> (100)
        on left: 27 28 29 30 31 32
        on right: 24
    cast_expression <A> (101)
        on left: 33 34
        on right: 24 34 35 36 37 38
    multiplicative_expression <E> (102)
        on left: 35 36 37 38
        on right: 36 37 38 39 40 41
    additive_expression <E> (103)
        on left: 39 40 41
        on right: 40 41 42 43 44
    shift_expression <E> (104)
        on left: 42 43 44
        on right: 43 44 45 46 47 48 49
    relational_expression <E> (105)
        on left: 45 46 47 48 49
        on right: 46 47 48 49 50 51 52
    equality_expression <E> (106)
        on left: 50 51 52
        on right: 51 52 53 54
    AND_expression <E> (107)
        on left: 53 54
        on right: 54 55 56
    exclusive_OR_expression <E> (108)
        on left: 55 56
        on right: 56 57 58
    inclusive_OR_expression <E> (109)
        on left: 57 58
        on right: 58 59 60
    logical_AND_expression <E> (110)
        on left: 59 60
        on right: 60 61 62
    logical_OR_expression <E> (111)
        on left: 61 62
        on right: 62 65 66
    M <instr> (112)
        on left: 63
        on right: 60 62 66 186 191 192 194 195 196 197
    N <S> (113)
        on left: 64
        on right: 60 62 66 191 192 197
    conditional_expression <E> (114)
        on left: 65 66
        on right: 66 67 82
    assignment_expression <E> (115)
        on left: 67 68
        on right: 19 20 68 80 81 135 137 139 140 162
    assignment_operator (116)
        on left: 69 70 71 72 73 74 75 76 77 78 79
        on right: 68
    expression <E> (117)
        on left: 80 81
        on right: 4 10 66 81 189 191 192 193 194 195 197 201
    constant_expression (118)
        on left: 82
        on right: 126 172 181
    declaration (119)
        on left: 83 84
        on right: 187 206 209 210
    declaration_specifiers (120)
        on left: 85 86 87 88 89 90 91 92
        on right: 83 84 85 87 89 91 157 158 207 208
    init_declarator_list (121)
        on left: 93 94
        on right: 83 94
    init_declarator <symp> (122)
        on left: 95 96
        on right: 93 94
    storage_class_specifier (123)
        on left: 97 98 99 100
        on right: 85 86
    type_specifier (124)
        on left: 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 87 88 114 115
    specifier_qualifier_list (125)
        on left: 114 115 116 117
        on right: 114 116 161
    enum_specifier (126)
        on left: 118 119 120 121 122
        on right: 113
    enumerator_list (127)
        on left: 123 124
        on right: 118 119 120 121 124
    enumerator (128)
        on left: 125 126
        on right: 123 124
    type_qualifier (129)
        on left: 127 128 129
        on right: 89 90 116 117 151 152
    function_specifier (130)
        on left: 130
        on right: 91 92
    declarator <symp> (131)
        on left: 131 132
        on right: 95 96 134 157 207 208
    direct_declarator <symp> (132)
        on left: 133 134 135 136 137 138 139 140 141 142 143 144 145
        on right: 131 132 135 136 137 138 139 140 141 142 143 144 145
    CT (133)
        on left: 146
        on right: 143 145 207 208
    pointer <symtp> (134)
        on left: 147 148 149 150
        on right: 131 149 150
    type_qualifier_list (135)
        on left: 151 152
        on right: 135 136 139 141 147 149 152
    parameter_type_list (136)
        on left: 153 154
        on right: 143
    parameter_list (137)
        on left: 155 156
        on right: 153 154 156
    parameter_declaration (138)
        on left: 157 158
        on right: 155 156
    identifier_list (139)
        on left: 159 160
        on right: 144 160
    type_name (140)
        on left: 161
        on right: 17 18 26 34
    initializer <symp> (141)
        on left: 162 163 164
        on right: 96 165 166 167 168
    initializer_list (142)
        on left: 165 166 167 168
        on right: 17 18 163 164 167 168
    designation (143)
        on left: 169
        on right: 165 167
    designator_list (144)
        on left: 170 171
        on right: 169 171
    designator (145)
        on left: 172 173
        on right: 170 171
    statement <S> (146)
        on left: 174 175 176 177 178 179
        on right: 180 181 182 188 191 192 193 194 195 196 197
    labeled_statement <S> (147)
        on left: 180 181 182
        on right: 174
    compound_statement <S> (148)
        on left: 183 184
        on right: 175 207 208
    block_item_list <S> (149)
        on left: 185 186
        on right: 183 186
    block_item <S> (150)
        on left: 187 188
        on right: 185 186
    expression_statement <E> (151)
        on left: 189 190
        on right: 176 196 197
    selection_statement <S> (152)
        on left: 191 192 193
        on right: 177
    iteration_statement <S> (153)
        on left: 194 195 196 197
        on right: 178
    jump_statement <S> (154)
        on left: 198 199 200 201 202
        on right: 179
    translation_unit (155)
        on left: 203 204
        on right: 0 204
    external_declaration (156)
        on left: 205 206
        on right: 203 204
    function_definition (157)
        on left: 207 208
        on right: 205
    declaration_list (158)
        on left: 209 210
        on right: 207 210


State 0

    0 $accept: • translation_unit $end
   83 declaration: • declaration_specifiers init_declarator_list SEMICOLON
   84            | • declaration_specifiers SEMICOLON
   85 declaration_specifiers: • storage_class_specifier declaration_specifiers
   86                       | • storage_class_specifier
   87                       | • type_specifier declaration_specifiers
   88                       | • type_specifier
   89                       | • type_qualifier declaration_specifiers
   90                       | • type_qualifier
   91                       | • function_specifier declaration_specifiers
   92                       | • function_specifier
   97 storage_class_specifier: • EXTERN
   98                        | • STATIC
   99                        | • AUTO
  100                        | • REGISTER
  101 type_specifier: • VOID
  102               | • CHAR
  103               | • SHORT
  104               | • INT
  105               | • LONG
  106               | • FLOAT
  107               | • DOUBLE
  108               | • SIGNED
  109               | • UNSIGNED
  110               | • BOOL
  111               | • COMPLEX
  112               | • IMAGINARY
  113               | • enum_specifier
  118 enum_specifier: • ENUM IDENTIFIER CURBRAOPEN enumerator_list CURBRACLOSE
  119               | • ENUM CURBRAOPEN enumerator_list CURBRACLOSE
  120               | • ENUM IDENTIFIER CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  121               | • ENUM CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  122               | • ENUM IDENTIFIER
  127 type_qualifier: • CONST
  128               | • RESTRICT
  129               | • VOLATILE
  130 function_specifier: • INLINE
  203 translation_unit: • external_declaration
  204                 | • translation_unit external_declaration
  205 external_declaration: • function_definition
  206                     | • declaration
  207 function_definition: • declaration_specifiers declarator declaration_list CT compound_statement
  208                    | • declaration_specifiers declarator CT compound_statement

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   99 storage_class_specifier: AUTO •

    $default  reduce using rule 99 (storage_class_specifier)


State 2

  118 enum_specifier: ENUM • IDENTIFIER CURBRAOPEN enumerator_list CURBRACLOSE
  119               | ENUM • CURBRAOPEN enumerator_list CURBRACLOSE
  120               | ENUM • IDENTIFIER CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  121               | ENUM • CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  122               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 32
    CURBRAOPEN  shift, and go to state 33


State 3

  128 type_qualifier: RESTRICT •

    $default  reduce using rule 128 (type_qualifier)


State 4

  109 type_specifier: UNSIGNED •

    $default  reduce using rule 109 (type_specifier)


State 5

   97 storage_class_specifier: EXTERN •

    $default  reduce using rule 97 (storage_class_specifier)


State 6

  101 type_specifier: VOID •

    $default  reduce using rule 101 (type_specifier)


State 7

  106 type_specifier: FLOAT •

    $default  reduce using rule 106 (type_specifier)


State 8

  103 type_specifier: SHORT •

    $default  reduce using rule 103 (type_specifier)


State 9

  129 type_qualifier: VOLATILE •

    $default  reduce using rule 129 (type_qualifier)


State 10

  102 type_specifier: CHAR •

    $default  reduce using rule 102 (type_specifier)


State 11

  108 type_specifier: SIGNED •

    $default  reduce using rule 108 (type_specifier)


State 12

  127 type_qualifier: CONST •

    $default  reduce using rule 127 (type_qualifier)


State 13

  110 type_specifier: BOOL •

    $default  reduce using rule 110 (type_specifier)


State 14

   98 storage_class_specifier: STATIC •

    $default  reduce using rule 98 (storage_class_specifier)


State 15

  111 type_specifier: COMPLEX •

    $default  reduce using rule 111 (type_specifier)


State 16

  130 function_specifier: INLINE •

    $default  reduce using rule 130 (function_specifier)


State 17

  112 type_specifier: IMAGINARY •

    $default  reduce using rule 112 (type_specifier)


State 18

  104 type_specifier: INT •

    $default  reduce using rule 104 (type_specifier)


State 19

  107 type_specifier: DOUBLE •

    $default  reduce using rule 107 (type_specifier)


State 20

  105 type_specifier: LONG •

    $default  reduce using rule 105 (type_specifier)


State 21

  100 storage_class_specifier: REGISTER •

    $default  reduce using rule 100 (storage_class_specifier)


State 22

  206 external_declaration: declaration •

    $default  reduce using rule 206 (external_declaration)


State 23

   83 declaration: declaration_specifiers • init_declarator_list SEMICOLON
   84            | declaration_specifiers • SEMICOLON
   93 init_declarator_list: • init_declarator
   94                     | • init_declarator_list COMMA init_declarator
   95 init_declarator: • declarator
   96                | • declarator ASSIGN initializer
  131 declarator: • pointer direct_declarator
  132           | • direct_declarator
  133 direct_declarator: • IDENTIFIER
  134                  | • ROBRAOPEN declarator ROBRACLOSE
  135                  | • direct_declarator SQBRAOPEN type_qualifier_list assignment_expression SQBRACLOSE
  136                  | • direct_declarator SQBRAOPEN type_qualifier_list SQBRACLOSE
  137                  | • direct_declarator SQBRAOPEN assignment_expression SQBRACLOSE
  138                  | • direct_declarator SQBRAOPEN SQBRACLOSE
  139                  | • direct_declarator SQBRAOPEN STATIC type_qualifier_list assignment_expression SQBRACLOSE
  140                  | • direct_declarator SQBRAOPEN STATIC assignment_expression SQBRACLOSE
  141                  | • direct_declarator SQBRAOPEN type_qualifier_list MUL SQBRACLOSE
  142                  | • direct_declarator SQBRAOPEN MUL SQBRACLOSE
  143                  | • direct_declarator ROBRAOPEN CT parameter_type_list ROBRACLOSE
  144                  | • direct_declarator ROBRAOPEN identifier_list ROBRACLOSE
  145                  | • direct_declarator ROBRAOPEN CT ROBRACLOSE
  147 pointer: • MUL type_qualifier_list
  148        | • MUL
  149        | • MUL type_qualifier_list pointer
  150        | • MUL pointer
  207 function_definition: declaration_specifiers • declarator declaration_list CT compound_statement
  208                    | declaration_specifiers • declarator CT compound_statement

    IDENTIFIER  shift, and go to state 34
    ROBRAOPEN   shift, and go to state 35
    MUL         shift, and go to state 36
    SEMICOLON   shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 24

   85 declaration_specifiers: • storage_class_specifier declaration_specifiers
   85                       | storage_class_specifier • declaration_specifiers
   86                       | • storage_class_specifier
   86                       | storage_class_specifier •  [IDENTIFIER, ROBRAOPEN, ROBRACLOSE, MUL, SEMICOLON, COMMA]
   87                       | • type_specifier declaration_specifiers
   88                       | • type_specifier
   89                       | • type_qualifier declaration_specifiers
   90                       | • type_qualifier
   91                       | • function_specifier declaration_specifiers
   92                       | • function_specifier
   97 storage_class_specifier: • EXTERN
   98                        | • STATIC
   99                        | • AUTO
  100                        | • REGISTER
  101 type_specifier: • VOID
  102               | • CHAR
  103               | • SHORT
  104               | • INT
  105               | • LONG
  106               | • FLOAT
  107               | • DOUBLE
  108               | • SIGNED
  109               | • UNSIGNED
  110               | • BOOL
  111               | • COMPLEX
  112               | • IMAGINARY
  113               | • enum_specifier
  118 enum_specifier: • ENUM IDENTIFIER CURBRAOPEN enumerator_list CURBRACLOSE
  119               | • ENUM CURBRAOPEN enumerator_list CURBRACLOSE
  120               | • ENUM IDENTIFIER CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  121               | • ENUM CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  122               | • ENUM IDENTIFIER
  127 type_qualifier: • CONST
  128               | • RESTRICT
  129               | • VOLATILE
  130 function_specifier: • INLINE

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   85 declaration_specifiers: • storage_class_specifier declaration_specifiers
   86                       | • storage_class_specifier
   87                       | • type_specifier declaration_specifiers
   87                       | type_specifier • declaration_specifiers
   88                       | • type_specifier
   88                       | type_specifier •  [IDENTIFIER, ROBRAOPEN, ROBRACLOSE, MUL, SEMICOLON, COMMA]
   89                       | • type_qualifier declaration_specifiers
   90                       | • type_qualifier
   91                       | • function_specifier declaration_specifiers
   92                       | • function_specifier
   97 storage_class_specifier: • EXTERN
   98                        | • STATIC
   99                        | • AUTO
  100                        | • REGISTER
  101 type_specifier: • VOID
  102               | • CHAR
  103               | • SHORT
  104               | • INT
  105               | • LONG
  106               | • FLOAT
  107               | • DOUBLE
  108               | • SIGNED
  109               | • UNSIGNED
  110               | • BOOL
  111               | • COMPLEX
  112               | • IMAGINARY
  113               | • enum_specifier
  118 enum_specifier: • ENUM IDENTIFIER CURBRAOPEN enumerator_list CURBRACLOSE
  119               | • ENUM CURBRAOPEN enumerator_list CURBRACLOSE
  120               | • ENUM IDENTIFIER CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  121               | • ENUM CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  122               | • ENUM IDENTIFIER
  127 type_qualifier: • CONST
  128               | • RESTRICT
  129               | • VOLATILE
  130 function_specifier: • INLINE

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  113 type_specifier: enum_specifier •

    $default  reduce using rule 113 (type_specifier)


State 27

   85 declaration_specifiers: • storage_class_specifier declaration_specifiers
   86                       | • storage_class_specifier
   87                       | • type_specifier declaration_specifiers
   88                       | • type_specifier
   89                       | • type_qualifier declaration_specifiers
   89                       | type_qualifier • declaration_specifiers
   90                       | • type_qualifier
   90                       | type_qualifier •  [IDENTIFIER, ROBRAOPEN, ROBRACLOSE, MUL, SEMICOLON, COMMA]
   91                       | • function_specifier declaration_specifiers
   92                       | • function_specifier
   97 storage_class_specifier: • EXTERN
   98                        | • STATIC
   99                        | • AUTO
  100                        | • REGISTER
  101 type_specifier: • VOID
  102               | • CHAR
  103               | • SHORT
  104               | • INT
  105               | • LONG
  106               | • FLOAT
  107               | • DOUBLE
  108               | • SIGNED
  109               | • UNSIGNED
  110               | • BOOL
  111               | • COMPLEX
  112               | • IMAGINARY
  113               | • enum_specifier
  118 enum_specifier: • ENUM IDENTIFIER CURBRAOPEN enumerator_list CURBRACLOSE
  119               | • ENUM CURBRAOPEN enumerator_list CURBRACLOSE
  120               | • ENUM IDENTIFIER CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  121               | • ENUM CURBRAOPEN enumerator_list COMMA CURBRACLOSE
  122               | • ENUM IDENTIFIER
  127 type_qualifier: • CONST
  128               | • RESTRICT
  129               | • VOLATILE
  130 function_specifier: • INLINE

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28
